Bug 1734854: Make NativeLayerRootCA avoid changing sublayers when it has no effect. r=jrmuizel, a=RyanVM

When isolating video layers, changes to sublayers that we are already ignoring
should not cause us to change our sublayers. This patch checks to see if the
changes to sublayers can all be safely ignored.

Differential Revision: https://phabricator.services.mozilla.com/D129330